heart-fronetend/templates/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: { { .Release.Name } }
  namespace: { { .Values.heart.namespace } }
  labels:
    app.kubernetes.io/name: { { .Release.Name } }
spec:
  selector:
    matchLabels:
      app: heart
      app.kubernetes.io/name: { { .Release.Name } }
  replicas: { { .Values.heart.replicas } }
  template:
    metadata:
      labels:
        app: heart
        app.kubernetes.io/name: { { .Release.Name } }
    spec:
      containers:
        - name: heart
          image: { { .Values.heart.image } }
          ports:
            - containerPort: 80
