heart-fronetend/templates/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: { { .Release.Name } }
  namespace: { { .Values.heart.namespace } }
  labels:
    app.kubernetes.io/name: { { .Release.Name } }
spec:
  type: { { .Values.heart.service.type } }
  selector:
    app: heart
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
