heart-fronetend/templates/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: { { .Release.Name } }
  namespace: { { .Values.heart.namespace } }
  labels:
    app.kubernetes.io/name: { { .Release.Name } }
spec:
  ingressClassName: { { .Values.heart.ingress.ingressClassName } }
  rules:
    - host: { { .Values.heart.host } }
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: { { .Release.Name } }
                port:
                  number: 80
